---------------------------------------------
- Wonder Scale Merchant                     -
---------------------------------------------

- v1.0.1000                                 -
---------------------------------------------
- 2020-04-24                                -
---------------------------------------------
.: WSM: Task: Item Module (WSM-29)

---------------------------------------------
- 2020-04-16                                -
---------------------------------------------
.: WSM: Task: Catalogue Module (WSM-5)

---------------------------------------------
- 2020-04-12                                -
---------------------------------------------
.: WSM: Task: Forget Password (WSM-3)
.: WSM: Task: Shop Module (WSM-24)

---------------------------------------------
- 2020-04-11                                -
---------------------------------------------
.: WSM: Task: Get template from existing code (WSM-14)
.: WSM: Task: Registration (WSM-2)
.: WSM: Task: Login (WSM-2)
.: WSM: Task: Activate account after registration (WSM-16)