@@ -58,6 +58,7 @@
             margin: 0;
             cursor: pointer;
             .ws-main-nav-list-item {
+                font-size: .9rem;
                 >a {
                     color: #222;
                     padding: 1rem;
