@@ -7,6 +7,7 @@
 - 2020-04-24                                -
 ---------------------------------------------
 .: WSM: Task: Item Module (WSM-29)
+.: WSM: Task: Information Module (WSM-21)
 
 ---------------------------------------------
 - 2020-04-16                                -
